--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,10 @@
     ],
     "require": {
         "php": ">5.2"
+    },
+    "autoload": {
+        "classmap": [
+            "tcpdf.php"
+        ]
     }
 }
